# Parallel-progamming

./: .gitignore  README.md
lab_1/: README.md  check.py  main.cpp  matrix1.txt  matrix2.txt  result.txt  writer.py
lab_1/Matrix_Multiply/: CMakeLists.txt  matrix1.txt  matrix2.txt  result.txt
lab_1/Matrix_Multiply/Matrix_Multiply/: CMakeLists.txt  Matrix_Multiply.cpp
